<resources>
    <!-- App -->
    <string name="app_name" translatable="false">Mondtag</string>
    <string name="action_info">Info</string>
    <string name="action_settings">Settings</string>
    <string name="action_scroll_to_today">Show today</string>
    <string name="action_interpretations">Interpretations</string>
    <string name="dialog_button_close">close</string>
    <string name="info_dialog_message">For technical information, source code and privacy statement, please visit <a href="Mondtag at github">https://github.com/kahles/mondtag</a>.</string>

    <!-- Data fetching -->
    <string name="data_fetching_toolbar_subtitle">Generating calendar …</string>
    <string name="status_importing">Importing data</string>
    <string name="status_generating">Generating minimal range</string>
    <string name="status_extending">Extending range</string>
    <string name="status_counting">Setting day counts</string>

    <!-- Settings -->
    <string name="pref_group_name_rise_set">Rise and set times</string>
    <string name="location">Location</string>
    <string name="timezone">Timezone</string>
    <string name="pref_key_timezone" translatable="false">pref_key_timezone</string>
    <string name="pref_key_location" translatable="false">pref_key_location</string>
    <string name="pref_group_key_rise_set" translatable="false">pref_key_rise_set</string>
    <string name="location_latitude">Latitude</string>
    <string name="location_longitude">Longitude</string>
    <string name="location_open">View on map</string>
    <string name="location_search">Search location</string>
    <string name="location_search_no_geocoder">No geocoding service available</string>
    <string name="location_search_connection_error">Error connecting to geocoding service</string>
    <string name="location_search_no_results">No results found</string>
    <string name="location_search_hint_select_result">Please select a result below</string>
    <string name="settings_info_dialog_message">It seems Mondtag is started the first time - default settings are loaded. Press \"back\" when you have customized them.</string>

    <!-- Default values -->
    <string name="dummy_action">Some action</string>
    <string name="dummy_day_name">Someday</string>
    <string name="dummy_date">1234–56–78</string>
    <string name="dummy_decimal">12.34</string>
    <string name="dummy_time">10:23 PM</string>
    <string name="dummy_time_2">1:23 AM</string>
    <string name="dummy_interpretationText">Interpretation</string>
    <string name="dummy_interpretationQuality">maybe good</string>

    <!-- Calendar events -->
    <string name="event_default_name">Action</string>

    <!-- Calendar itemView -->
    <string name="button_extend_data">Calculate more days</string>

    <!-- Day detail itemView descriptions -->
    <string name="description_sun_rise">Sun rise</string>
    <string name="description_sun_set">Sun set</string>
    <string name="description_lunar_rise">Lunar rise</string>
    <string name="description_lunar_set">Lunar set</string>
    <string name="description_lunar_phase">Lunar phase</string>
    <string name="description_zodiac_sign">Zodiac sign</string>
    <string name="description_zodiac_direction">Zodiac direction</string>
    <string name="description_zodiac_element">Element</string>
    <string name="button_create_reminder">Create reminder</string>

    <!-- Day data -->
    <string name="ascending">ascending</string>
    <string name="descending">descending</string>
    <string name="increasing">waxing</string>
    <string name="decreasing">waning</string>
    <string name="full_moon">full moon</string>
    <string name="new_moon">new moon</string>
    <string name="air">air</string>
    <string name="aquarius">aquarius</string>
    <string name="aries">aries</string>
    <string name="cancer">cancer</string>
    <string name="capricorn">capricorn</string>
    <string name="earth">earth</string>
    <string name="fire">fire</string>
    <string name="gemini">gemini</string>
    <string name="leo">leo</string>
    <string name="libra">libra</string>
    <string name="pisces">pisces</string>
    <string name="sagittarius">sagittarius</string>
    <string name="scorpio">scorpio</string>
    <string name="taurus">taurus</string>
    <string name="virgo">virgo</string>
    <string name="water">water</string>

    <!-- interpretation -->
    <string name="interpretation_best">best</string>
    <string name="interpretation_good">good</string>
    <string name="interpretation_bad">bad</string>
    <string name="interpretation_worst">worst</string>

    <string name="interpret_none">No interpretation</string>

    <!--
    Convention for naming interpreter keys is interpret_[ContainingClass]_[Name]
    See also ResourceMapper#createInterpreterKey
    -->
    <string name="interpret_Gardening_CombatPests">Combat pests</string>
    <string name="interpret_Gardening_CuttingTransplant">Make cuttings / transplant</string>
    <string name="interpret_Gardening_Fertilize">Fertilize</string>
    <string name="interpret_Gardening_Graft">Graft</string>
    <string name="interpret_Gardening_Harvest">Harvest</string>
    <string name="interpret_Gardening_WeedControl">Weed control</string>
    <string name="interpret_Gardening_Trim">Trim plants</string>
    <string name="interpret_Gardening_MowLawn">Mow the lawn</string>
    <string name="interpret_Gardening_Water">Water plants</string>
    <string name="interpret_Gardening_SowPlant">Sow and plant</string>


    <!-- Interpreter annotations -->

    <!-- Gardening -->

	<string name="interpret_gardening_plants_flowers">flowers</string>
	<string name="interpret_gardening_plants_fruit">fruit plants</string>
	<string name="interpret_gardening_plants_lawn">lawn</string>
	<string name="interpret_gardening_plants_leafy">leafy vegetables</string>
	<string name="interpret_gardening_plants_root">root vegetables</string>
	<string name="interpret_gardening_plants_potatoes">potatoes</string>
	<string name="interpret_gardening_plants_salad">salad</string>

	<string name="interpret_gardening_harvest_conserve">to conserve</string>
	<string name="interpret_gardening_harvest_dry">to dry</string>
	<string name="interpret_gardening_harvest_consume">consume immediately</string>

	<string name="interpret_gardening_dig">dig</string>
	<string name="interpret_gardening_weed">weed</string>
	<string name="interpret_gardening_weed_before_noon">weed before noon</string>

	<string name="interpret_gardening_trim_fruit">fruit trees</string>
	<string name="interpret_gardening_trim_sick">sick plants</string>

	<string name="interpret_gardening_combatpests_over">overterrestrial pests</string>
	<string name="interpret_gardening_combatpests_sub">subterrestrial pests</string>
	<string name="interpret_gardening_combatpests_slugs">slugs</string>

</resources>
