<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/action_interpretation"
        android:title="@string/action_interpretations"
        android:icon="@drawable/ic_lightbulb_outline_white_36dp"
        app:showAsAction="ifRoom|collapseActionView">
        <menu>
            <item android:id="@+id/interpretationDummy" android:title="@string/dummy_interpretationText"/>
        </menu>
    </item>

    <item android:id="@+id/action_info"
        android:title="@string/action_info"
        app:showAsAction="never"
        android:icon="@drawable/ic_info" />

    <item android:id="@+id/action_settings"
        android:title="@string/action_settings"
        app:showAsAction="never"
        android:icon="@drawable/ic_settings" />

</menu>