<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              tools:context="de.kah2.mondtag.calendar.DayDetailFragment"
              android:padding="5dp"
              android:orientation="vertical">

    <GridLayout
        android:id="@+id/day_detail_data_table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:useDefaultMargins="true"
        android:columnCount="3">

        <!-- Sun rise and set-->
        <ImageView
            android:id="@+id/sun_rise_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="center"
            android:src="@drawable/sun_rise"
            android:contentDescription="@string/description_sun_rise"/>
        <TextView
            android:id="@+id/sun_rise_description"
            android:text="@string/description_sun_rise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/sun_rise_text"
            android:text="@string/dummy_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <ImageView
            android:id="@+id/sun_set_icon"
            android:src="@drawable/sun_set"
            android:contentDescription="@string/description_sun_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="center"/>
        <TextView
            android:id="@+id/sun_set_description"
            android:text="@string/description_sun_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/sun_set_text"
            android:text="@string/dummy_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!-- Lunar rise and set-->
        <ImageView
            android:id="@+id/lunar_rise_set_first_icon"
            android:src="@drawable/lunar_rise"
            android:contentDescription="@string/description_lunar_rise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="center"/>
        <TextView
            android:id="@+id/lunar_rise_set_first_description"
            android:text="@string/description_lunar_rise"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/lunar_rise_set_first_text"
            android:text="@string/dummy_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <ImageView
            android:id="@+id/lunar_rise_set_second_icon"
            android:src="@drawable/lunar_set"
            android:contentDescription="@string/description_lunar_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="center"/>
        <TextView
            android:id="@+id/lunar_rise_set_second_description"
            android:text="@string/description_lunar_set"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/lunar_rise_set_second_text"
            android:text="@string/dummy_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <!-- Phase, sign, direction and element -->
        <ImageView
            android:id="@+id/lunar_phase_icon"
            android:src="@drawable/moon_waxing"
            android:contentDescription="@string/increasing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="center"/>
        <TextView
            android:id="@+id/lunar_phase_description"
            android:text="@string/description_lunar_phase"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/lunar_phase_text"
            android:text="@string/increasing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <ImageView
            android:id="@+id/zodiac_direction_icon"
            android:src="@drawable/moon_ascending"
            android:contentDescription="@string/ascending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="center"/>
        <TextView
            android:id="@+id/zodiac_direction_description"
            android:text="@string/description_zodiac_direction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/zodiac_direction_text"
            android:text="@string/ascending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <ImageView
            android:id="@+id/zodiac_sign_icon"
            android:src="@drawable/virgo"
            android:contentDescription="@string/virgo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="center"/>
        <TextView
            android:id="@+id/zodiac_sign_description"
            android:text="@string/description_zodiac_sign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/zodiac_sign_text"
            android:text="@string/virgo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <ImageView
            android:id="@+id/zodiac_element_icon"
            android:src="@drawable/air"
            android:contentDescription="@string/air"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:scaleType="center"/>
        <TextView
            android:id="@+id/zodiac_element_description"
            android:text="@string/description_zodiac_element"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/zodiac_element_text"
            android:text="@string/air"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </GridLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/interpretation_list"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"/>

    <Button
        android:id="@+id/buttonCreateReminder"
        android:layout_width="match_parent"
        android:layout_height="@dimen/standard_height"
        android:text="@string/button_create_reminder"/>

</LinearLayout>
