<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <EditText
        android:id="@+id/location_name"
        android:layout_width="match_parent"
        android:layout_height="@dimen/standard_height"
        android:inputType="text"
        android:text="@string/location"
        android:hint="@string/location"
        android:importantForAutofill="no"
        tools:ignore="UnusedAttribute" />
    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <TextView
            android:id="@+id/location_desc_lat"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/standard_height"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center_vertical|start"
            android:text="@string/location_latitude" />
        <EditText
            android:id="@+id/location_latitude"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:text="@string/dummy_decimal"
            android:layout_weight="1"
            android:hint="@string/dummy_decimal"
            android:importantForAutofill="no"
            tools:ignore="UnusedAttribute" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <TextView
            android:id="@+id/location_desc_long"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/standard_height"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:gravity="center_vertical|start"
            android:text="@string/location_longitude" />
        <EditText
            android:id="@+id/location_longitude"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:text="@string/dummy_decimal"
            android:layout_weight="1"
            android:hint="@string/dummy_decimal"
            android:importantForAutofill="no"
            tools:ignore="UnusedAttribute" />
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <Button
            android:id="@+id/location_search_button"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/location_search"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:width="0dp"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/location_open_button"
            style="?android:attr/buttonBarButtonStyle"
            android:text="@string/location_open"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:width="0dp"
            android:layout_weight="1"/>
    </LinearLayout>
    <ProgressBar
        android:id="@+id/location_search_progressbar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/location_search_hint_select_result"
        android:text="@string/location_search_hint_select_result"
        android:visibility="gone"
        android:textAlignment="center"/>
    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/locations_search_result_list"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"/>
</LinearLayout>
