<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:layout_margin="5dp" >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:padding="5dp">

        <TextView
            android:id="@+id/location_search_result_name"
            android:text="@string/dummy_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"/>

        <TextView
            android:id="@+id/location_search_result_latitude_name"
            android:text="@string/location_latitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/location_search_result_name"
            android:layout_alignLeft="@id/location_search_result_name"
            android:layout_alignStart="@id/location_search_result_name"/>
        <TextView
            android:id="@+id/location_search_result_latitude"
            android:text="@string/dummy_decimal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/location_search_result_name"
            android:layout_alignEnd="@id/location_search_result_name"
            android:layout_alignRight="@id/location_search_result_name"/>

        <TextView
            android:id="@+id/location_search_result_longitude_name"
            android:text="@string/location_longitude"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/location_search_result_latitude_name"
            android:layout_alignLeft="@id/location_search_result_name"
            android:layout_alignStart="@id/location_search_result_name"/>

        <TextView
            android:id="@+id/location_search_result_longitude"
            android:text="@string/dummy_decimal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/location_search_result_latitude_name"
            android:layout_alignEnd="@id/location_search_result_name"
            android:layout_alignRight="@id/location_search_result_name"/>

    </RelativeLayout>
</android.support.v7.widget.CardView>